add more to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,18 @@ luac.out
 builds/
 
 source/libraries/noble/docs/
+
+.DS_Store
+*.o
+*.lst
+Extension/.dep/*.o.d
+*.pdx
+*.dylib.dSYM
+*.dylib
+*.bin
+*.elf
+*.hex
+*.map
+build/
+.cache/
+compile_commands.json
